# pyUTSAlgorithms

./: .gitignore  CITATION.cff  LICENSE  README.md  index.html  requirement.txt  requirements.txt  search.js  setup.cfg  setup.py  uts.html
.github/workflows/: docs.yml  main.yml  publish.yml
docs/: index.html  search.js  uts.html
docs/uts/: ema.html  gradient.html  index.html  peak_detection.html  rolling.html  sma.html  thresholding.html  zscore.html
src/uts/: __init__.py  ema.py  gradient.py  peak_detection.py  rolling.py  sma.py  thresholding.py  zscore.py
test/: test_ema.py  test_gradient.py  test_peaks.py  test_rolling.py  test_sma.py  test_zscore.py
tests/: test_ema.py  test_gradient.py  test_peak_detection.py  test_rolling.py  test_sma.py  test_thresholding.py  test_zscore.py
uts/: __init__.py  ema.html  ema.py  gradient.html  gradient.py  peak_detection.html  peak_detection.py  rolling.html  rolling.py  sma.html  sma.py  thresholding.html  thresholding.py  zscore.html  zscore.py
