[metadata]
name = pyUTSAlgorithms
version = 0.1.2
author = Mário Antunes
author_email = mario.antunes@ua.pt
description = pyUTSAlgorithms (Unevenly Spaced Time Series Algorithms) Python package computes rolling statistics for uneven time series data.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/mariolpantunes/uts
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.23

[options.packages.find]
where = src